[metadata]
name = pyhp-core
version = attr: pyhp.__version__
description = package for embedding and using python code like php
license = GPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
author = Eric Wolf
author_email = robo-eric@gmx.de
maintainer = Eric Wolf
maintainer_email = robo-eric@gmx.de
url = https://github.com/Deric-W/PyHP
classifiers =
    Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = pyhp
python_requires = >=3.8

[coverage:run]
source = pyhp
omit = tests/*

[mypy]
disallow_redefinition = True
warn-unreachable = True
warn-redundant-casts = True
warn_unused_configs = True
disallow-subclassing-any = True
